# deathtrap

./: .gitignore  CMakeLists.txt  README.md  deathtrap.pro
include/hyfileaccess/: database.h
src/: apiserver_main.cpp  database.cpp  database.h  fileserver_main.cpp  wsclient.cpp  wsclient.h  wsmessage.h  wsserver.cpp  wsserver.h
test/: main.cpp  main.h  test.h
test/db/: client.caches.db  client.db  client.mappings.db  client.master.db
